# GPT

./:  demo.py  01.py  011.py  2.py  Chinese.py  actural.py  beliefs.ipynb  data.py  demo.py  demo_GPT.py  depart.py  gpt_depart.py  gpt_merge.py  labeldata.csv  merge.py  mypython.py  output_20240719_195653.csv  output_20240719_195749.csv  output_20240719_195829.csv  output_20240719_200350.csv  output_20240827_201803.csv  pyproject.toml  sample.csv
data/: rest.csv
multi/: 1.py  labeldata.csv  output.csv  output_20240718_202047.csv  read.py  test.py  test1.py  text.py
now/: RAG.py  demo.py  test.py  test_one_comment.py  test_pandas.py
storage/: index_store.json
过去/: output.csv  output_20240719_183914.csv  output_20240804_182937.csv  output_20240825_212154.csv  output_20240825_213600.csv  output_20240825_214554.csv
