[tool.poetry]
name = "gpt"
version = "0.1.0"
description = ""
authors = ["Haohanblue <haohanblue@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
zhipuai = "^2.1.2"
pandas = "^2.2.2"
langchain = "^0.2.7"
scikit-learn = "^1.5.1"
textblob = "^0.18.0.post0"
tqdm = "^4.66.4"
langchainhub = "^0.1.21"
langsmith = "^0.1.104"
openai = "^1.42.0"
langchain-openai = "^0.1.22"
llama-index-llms-openai = "^0.2.0"
llama-index = "^0.11.1"
llama-index-experimental = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
